--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				},
 				error: function (jqXHR, textStatus, errorThrown)
 				{
-					console.log('ERRORS: ' + textStatus);
+					console.log('ERRORS: ' + textStatus+ ' '+jqXHR+' '+errorThrown);
 				}
 			});
 		}
@@ -59,7 +59,7 @@
 			
 		</div>
         <script>
-			get();
+            get();
             //getLocation();
             //getMsgs();
         </script>
